--- a/.github/workflows/build_apk.yaml
+++ b/.github/workflows/build_apk.yaml
@@ -3,7 +3,7 @@ name: Flutter Workflow
 on: 
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -41,3 +41,4 @@ jobs:
         with:
           name: release-apk
           path: build/app/outputs/apk/release/app-release.apk
+      
